fix: item create/update endpoints
